force-app/main/default/objects/Finance_Account__c/fields/Account_Codes__c.field-meta.xml
<CustomField>
    <fullName>Account_Codes__c</fullName>
    <description>Bank Account Code</description>
    <label>Account Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>