force-app/main/default/objects/Finance_Account__c/fields/Balance_Last_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Balance_Last_Updated_At__c</fullName>
    <label>Balance Last Updated At</label>
    <type>DateTime</type>
</CustomField>