force-app/main/default/objects/Finance_Account__c/fields/CC_Bill_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Bill_Due_Date__c</fullName>
    <label>Bill Due Date</label>
    <type>Date</type>
</CustomField>