force-app/main/default/objects/Finance_Account__c/fields/Investment_Count__c.field-meta.xml
<CustomField>
    <fullName>Investment_Count__c</fullName>
    <label>Investment Count</label>
    <summaryFilterItems>
        <field>Investment__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment__c.Finance_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>