force-app/main/default/objects/Finance_Account__c/fields/SA_Emergency_Fund__c.field-meta.xml
<CustomField>
    <fullName>SA_Emergency_Fund__c</fullName>
    <defaultValue>200000</defaultValue>
    <label>Emergency Fund</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>