force-app/main/default/objects/Finance_Account__c/fields/SA_Investable_Fund__c.field-meta.xml
<CustomField>
    <fullName>SA_Investable_Fund__c</fullName>
    <formula>IF(
 OR(NOT(CONTAINS(Account_Codes__c, &apos;-SA&apos;)), SA_Last_Balance__c &lt; SA_Emergency_Fund__c), 
 0, 
 SA_Last_Balance__c - SA_Emergency_Fund__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Investable Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>