force-app/main/default/objects/Finance_Account__c/fields/SA_Last_Balance__c.field-meta.xml
<CustomField>
    <fullName>SA_Last_Balance__c</fullName>
    <label>Last Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>