force-app/main/default/objects/Finance_Account__c/fields/Total_Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested_Amount__c</fullName>
    <label>Total Invested Amount</label>
    <summarizedField>Investment__c.Invested_Amount__c</summarizedField>
    <summaryForeignKey>Investment__c.Finance_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>