force-app/main/default/objects/Finance_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>SA_Investable_Fund__c</columns>
    <columns>SA_Last_Balance__c</columns>
    <columns>CC_Last_Bill_Paid_Date__c</columns>
    <columns>CC_Last_Paid_Amount__c</columns>
    <columns>Total_Invested_Amount__c</columns>
    <columns>Transaction_Count__c</columns>
    <columns>Investment_Count__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>